--- a/capstone_notebook.ipynb
+++ b/capstone_notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=\"#2196F3\"> Capstone project</font>"
+    "# Capstone project"
    ]
   },
   {
